--- a/config/depth_omninxt_params.yaml
+++ b/config/depth_omninxt_params.yaml
@@ -10,7 +10,7 @@ depth_estimation_node:
     transform_config_path: "/home/lis/ros2_swarmnxt_ws/src/depth_estimation_ros2/config/cam0_to_centroid.yaml"
 
     # Path to the ONNX model. Use an absolute path.
-    onnx_model_path: "/home/lis/ros2_swarmnxt_ws/src/depth_estimation_ros2/models/S2M2_S_192_192_v2_torch29.onnx"
+    onnx_model_path: "/home/lis/ros2_swarmnxt_ws/src/depth_estimation_ros2/models/S2M2_S_256_160_v2_torch29.onnx"
 
     # ONNX Runtime execution provider: "tensorrt", "cuda", or "cpu"
     execution_provider: "tensorrt"
@@ -26,10 +26,10 @@ depth_estimation_node:
     calibration_base_path: "/home/lis/ros2_swarmnxt_ws/src/depth_estimation_ros2/config"
 
     # The resolution folder to use. This should match the folder name suffix.
-    calibration_resolution: "192_192"
+    calibration_resolution: "256_160"
 
     # Whether to publish a single, combined point cloud.
-    publish_combined_pointcloud: false
+    publish_combined_pointcloud: true
 
     # Topic for the combined point cloud.
     combined_pointcloud_topic: "/depth/pointcloud/combined"
@@ -38,10 +38,39 @@ depth_estimation_node:
     pointcloud_frame_id: "world"
 
     # if true, only publish the points we are sure about for s2m2
-    filter_disparity: false
+    filter_disparity: true
 
     # if true then run with nvidia multi-stream; if false run sequentially
     run_parallel: true
 
     # if true send depth images on ros2 topic and compute time in the terminal
     verbose: true
+
+    # =====================================================
+    # DEPTH CORRECTION PARAMETERS
+    # =====================================================
+    # Depth corrections are loaded from the calibration folder:
+    #   <calibration_base_path>/final_maps_<resolution>/depth_corrections.yaml
+    #
+    # Example depth_corrections.yaml:
+    #   depth_correction:
+    #     baseline_scales: [1.07, 1.45, 0.92, 1.04]
+    #     disparity_offsets: [1.0, 0.5, -0.9, 1.0]
+    #
+    # Order matches stereo_pairs: ["0_1", "1_2", "2_3", "3_0"]
+    # If file is missing, defaults to no correction (scale=1.0, offset=0.0)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
