--- a/config/depth_omninxt_params.yaml
+++ b/config/depth_omninxt_params.yaml
@@ -43,8 +43,11 @@ depth_estimation_node:
     # if true then run with nvidia multi-stream; if false run sequentially
     run_parallel: true
 
-    # if true send depth images on ros2 topic and compute time in the terminal
-    verbose: true
+    # if true send debug image over ros2 topic
+    debug_grid: true
+
+    # if true compute time in the terminal
+    verbose: false
 
     # =====================================================
     # DEPTH CORRECTION PARAMETERS
